<resources>
    <string name="app_name">AndroidTest</string>

    <!-- Main Screen Strings -->
    <string name="activity_main_title">Coding Tasks</string>
    <string name="chat_button">CHAT</string>
    <string name="login_button">LOGIN</string>
    <string name="animation_button">ANIMATION</string>
    <string name="avatar">Avatar</string>
    <string name="nicholas_anyanwu">Nicholas Anyanwu</string>
    <string name="activity_chat_title">Chat</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="activity_login_title">Login</string>
    <string name="activity_animation_title">Animation</string>
    <string name="fade_in">Fade In</string>

</resources>
