<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gpc_sunset">

    <ProgressBar
        android:id="@+id/progress_bar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/invisible_color"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/email_edt"
            style="@style/CustomEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="nfo@rapptrlabs.com"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_edt"
            style="@style/CustomEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="Test123"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_ripple"
            android:text="@string/login_button"
            android:textColor="@color/background" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>